<resources>
    <string name="app_name">Hacia la igualdad</string>
    <string name="bt1">Iniciar</string>
    <string name="A1_titulo">Bienvenido</string>

    <string name="A2_enunciado">¿Crees que existe algún caso de violencia de género en tu entorno?</string>
    <string name="A2_boton1">No lo creo</string>
    <string name="A2_boton2">Sí, creo que existe</string>
    <string name="A2_boton3">Sí, lo estoy sufriendo</string>
    <string name="A2_imagen"></string>

    <string name="A3_titulo">"¿Crees que una imagen pública de este tipo tiene la misma repercusión para ellos?"</string>
    <string name="A3_btsi">Sí</string>
    <string name="A3_btno">No</string>


    <string name="A4_enunciado">Global Humanitaria es una ONG que desarrolla proyectos para reducir la desigualdad de género en muchos países del mundo, si quieres colaborar pulsa el boton SMS.</string>
    <string name="A4_boton">Enviar SMS</string>
    <string name="A4_boton_opinar">Participar en encuesta</string>

    <string name="A5_descripcionGuardiaCivil">Extracto de la página web de la guardía civil</string>
    <string name="A5_descripcion016">Marcar 016</string>
    <string name="A5_titulo">La Violencia de genero siempre avisa.A la primera señal de malos tratos, LLAMA</string>

    <string name="A6_pregunta1">¿Alguna vez has levantado la mano a otra persona?</string>
    <string name="A6_res11">Sí</string>
    <string name="A6_res12">No</string>

    <string name="A6_pregunta2">¿Colaboras en las tareas domésticas?</string>

    <string name="A6_pregunta3">¿Estás de acuerdo con que se financien los moviemientos feministas?</string>
    <string name="A6_btnEnviar">ENVIAR</string>

    <string name="A7_titulo">¿Quieres enviarnos un comentario con tu visión en el asunto?</string>
    <string name="A7_boton">Enviar comentario</string>

    <string name="menu_Cuestionario">Cuestionario</string>
    <string name="menu_acerca">Acerca de</string>

    <string name="directores">Directores de proyecto</string>
    <string name="manu">Manuel S. García Mora</string>
    <string name="javi">Javier Fernandez Bastante</string>
    <string name="paloma">Paloma Sanchez</string>





</resources>