<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#6A721357"
    tools:context=".activity_2">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="192dp"
        android:layout_height="211dp"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:onClick="ira3"
            android:text="@string/A2_boton1" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:onClick="ira4"
            android:text="@string/A2_boton2" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:onClick="ira5"
            android:text="@string/A2_boton3" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="414dp"
        android:layout_height="204dp"
        android:contentDescription="@A2_imagen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ojo" />

    <TextView
        android:id="@+id/tvp2"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="20dp"
        android:autoText="false"
        android:gravity="center|center_horizontal"
        android:text="@string/A2_enunciado"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>